Use shared system libs and avahi
It is unwise to run multiple DNS/DNS-SD stacks on the same system so use
avahi which is used on most linux dist today.

Also use shared librarys to make sure we get all the lateset security
updates provided by our dist.

Patch is abit dirty, it works but needs abit more work

--- a/airupnp.service
+++ b/airupnp.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=AirUPnP bridge
-After=network-online.target
+After=network-online.target avahi-daemon.service
 Wants=network-online.target
 
 [Service]
