--- a/airupnp/Makefile
+++ b/airupnp/Makefile
@@ -1,14 +1,6 @@
-BASE		= ../..
-OS 			:= $(shell uname)
-
 TOOLS		= ../tools
 COMMON		= ../common
 SRC			= ./src
-MDNSSD		= $(BASE)/mdnssd
-TINYSVCMDNS	= $(BASE)/tinysvcmdns
-VALGRIND	= $(BASE)/valgrind
-UPNP 		= $(BASE)/libupnp/1.6.19
-JANSSON		= $(BASE)/jansson
 
 DEFINES 	+= -D_FILE_OFFSET_BITS=64 -DPB_FIELD_16BIT -DHAVE_STDINT_H -DNDEBUG -D_GNU_SOURCE -D_USE_XML_
 
@@ -20,36 +12,26 @@ else ifneq ($(OS), SunOS)
 LDFLAGS 	+= -Wl,--gc-sections
 endif
 
-vpath %.c $(TOOLS):$(COMMON):$(SRC):$(SQUEEZETINY):$(MDNSSD):$(TINYSVCMDNS)
+vpath %.c $(TOOLS):$(COMMON):$(SRC)
 
 INCLUDE = -I. \
-		  -I$(VALGRIND)/memcheck -I$(VALGRIND)/include \
 		  -I$(TOOLS) \
 		  -I$(COMMON) \
 		  -I$(SRC) -I$(SRC)/inc \
-		  -I$(UPNP)/ixml/inc -I$(UPNP)/upnp/inc -I$(UPNP)/build/inc -I$(UPNP)/threadutil/inc \
-		  -I$(MDNSSD) \
-		  -I$(JANSSON)/src \
-		  -I$(BASE)/flac/include\
-		  -I$(TINYSVCMDNS)
 		  		  
 DEPS	= $(SRC)/airupnp.h
 				  
 SOURCES = avt_util.c airupnp.c mr_util.c config_upnp.c  \
-		  alac.c base64.c hairtunes.c raopcore.c util.c log_util.c \
-		  mdnssd-min.c \
-		  mdns.c mdnsd.c
+		  alac.c base64.c mdnsd.c hairtunes.c raopcore.c util.c log_util.c \
 		
 SOURCES_LIBS = 
 		
 OBJECTS 		= $(patsubst %.c,$(OBJ)/%.o,$(SOURCES)) $(patsubst %.c,$(OBJ)/%.o,$(SOURCES_LIBS)) 
 
-LIBRARY 		= $(OBJ)/libixml.a $(OBJ)/libFLAC.a  $(OBJ)/libupnp.a  $(OBJ)/libthreadutil.a 
-
 all: $(EXECUTABLE) 
 
 $(EXECUTABLE): $(OBJECTS)
-	$(CC) $(OBJECTS) $(LIBRARY) $(LDFLAGS) -o $@
+	$(CC) $(OBJECTS) $(LDFLAGS) -o $@
 
 $(OBJECTS): $(DEPS) | bin $(OBJ) 
 
@@ -60,7 +42,7 @@ bin:
 	@mkdir -p bin
 
 $(OBJ)/%.o : %.c
-	$(CC) $(CFLAGS) $(CPPFLAGS) $(INCLUDE) $< -c -o $@
+	$(CC) $(CFLAGS) $(CPPFLAGS) $(INCLUDE) -c $< -o $@
 
 clean:
 	rm -f $(OBJECTS) $(EXECUTABLE)
